Added Base64 encoder/decoder to avoid sun.misc.*
git-svn-id: https://hawkscope.googlecode.com/svn/trunk@384 033809cf-e84d-0410-81fb-211d375de673